fix(ffe-buttons): Make sure the underline on tertiary buttons are visible also in inline mode.

--- a/packages/ffe-buttons/less/inline-base-button.less
+++ b/packages/ffe-buttons/less/inline-base-button.less
@@ -74,6 +74,7 @@
     &::after {
         border-bottom: solid 1px currentColor;
         content: ' ';
+        display: inherit;
         width: 100%;
     }
 
